# MEGA

./: .gitignore  .project  CMakeLists.txt  README.md  README.rst
Logs/: Log.txt
src/: logger.cpp  logger.h  start.cpp  window.cpp  window.h
src/headers/: logger.h  window.h
